Updated all pages to the new style, added some projects to the projects page

--- a/projects.html
+++ b/projects.html
@@ -1,153 +1,203 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Michroma&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="main_style.css" />
+  <link rel="stylesheet" href="project_style.css" />
+
+  <title>Home</title>
 </head>
 
-<style>
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+<body>
 
-  body {
-    margin: 0;
-    background-color: #2F2D59;
-  }
+  <div class="background">
+    <div class="content">
+      <div class="header">
+        <div class="header-content">
+          <div class="title-logo">
+            <h1>Sophia Hatheway</h1>
+            <h2>Game Designer & Developer</h2>
+          </div>
+          <div class="nav-bar">
+            <a href="###">My Works</a>
+            <a>About Me</a>
+            <a href="contact.html">Contact Me</a>
+          </div>
 
-  .center-container {
-    display: flex;
-    justify-content: center;
-    /* horizontal */
-    /*align-items: center; vertical */
-    width: 100%;
-    /* full viewport height */
-    background-color: #5A55AA;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-  }
-
-  .main-buttons {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
-    padding: 30px;
-    gap: 5%;
-    max-width: 100%;
-    box-sizing: border-box;
-  }
-
-  .project-container {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    padding-left: 2%;
-    padding-right: 2%;
-    margin-left: 5%;
-    margin-right: 5%;
-    background-color: #5A55AA;
-    max-width: 100%;
-    box-sizing: border-box;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-    border-radius: 8px;
-  }
-
-  .main-buttons button {
-    flex: 1 1 150px;
-    /* grow, shrink, base width */
-    max-width: 150px;
-  }
-</style>
-
-<div class="center-container">
-  <div style="padding: 30px;">
-    <h1 style="text-align: center;">Sophia Hatheway</h1>
-    <h2 style="text-align: center;">Game Designer & Developer</h2>
-  </div>
-</div>
-
-<div class="main-buttons">
-  <div style="padding: 10px;">
-    <a href="index.html">
-      <button>
-        Home
-      </button>
-    </a>
-  </div>
-  <div style="padding: 10px">
-    <a href="projects.html">
-      <button>
-        My Works
-      </button>
-    </a>
-  </div>
-  <div style="padding: 10px">
-    <a href="about.html">
-      <button>
-        About Me
-      </button>
-    </a>
-  </div>
-  <div style="padding: 10px">
-    <a href="contact.html">
-      <button>
-        Contact Me
-      </button>
-    </a>
-  </div>
-</div>
-
-<div class="project-container" style="text-align: center;">
-  <div>
-    <h3>
-      My Works
-    </h3>
-  </div>
-  <div>
-    <p>
-      Below are some of my projects, and you can navigate to other pages using the links at the top.
-    </p>
-
-    <div>
-      <h4>Project 1: Grill-A-Warfare</h4>
-      <p>A restaurant-themed first-person shooter. Developed by the indie development team LettuceCook Studios.</p>
-      <div class="image-carousel">
-        <div class="slides">
-          <img src="images/girll-a-cover.png" class="slide active" alt="Grill-A-Warfare Cover">
-          <img src="images/lettucecook.png" class="slide" alt="LettuceCook Studios Team Promo Photo">
         </div>
-        <button class="prev" onclick="changeSlide(-1)">❮</button>
-        <button class="next" onclick="changeSlide(1)">❯</button>
-      </div>
-      <div style="padding: 20px;">
-        <p style="padding: 1px; justify-content: right;">Trailer: </p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/gFHjNEvt_IQ?si=vrmQRcdhkbGVZAx8"
-          title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
       </div>
 
-      <p>I was the project manager for this game, as well as providing assistence in development, and prividing UI
-        design and art.
-        As part of being the project manager, I was responsible for scheduling meetings, tracking progress, and ensuring
-        effective
-        communication among team members. I created all socials and posts for the game (Instagram, YouTube, Itch.io).
-      </p>
-      </p>
+      <div class="main-content">
+        <h3><strong>My Works</strong></h3>
+        <p class="project-intro">
+          Here are some of my projects! Click on any project to learn more about it.
+        </p>
+        <div class="project-grid">
+          <div class="project-container">
+            <button class="project-name"><strong>Grill-A-Warfare</strong></button>
+            <p class="project-summary">A fast-paced first person shooter that takes place in a kitchen setting.</p>
+            <!-- COLLAPSIBLE CONTENT -->
+            <div class="project-details">
+              <div class="img-carousel">
+                <div class="project-imgs">
+                  <img src="images/grill-a-cover.png" alt="Grill-A-Warfare Cover-Art">
+                  <img src="images/lettucecook.png" alt="Grill-A-Warfare Studios Logo">
+                  <img src="images/grill-a-shot-1.png" alt="Grill-A-Warfare Screenshot 1">
+                  <img src="images/grill-a-shot-2.png" alt="Grill-A-Warfare Screenshot 2">
+                  <img src="images/grill-a-shot-3.png" alt="Grill-A-Warfare Screenshot 3">
+
+                </div>
+                <button class="carousel-btn prev">‹</button>
+                <button class="carousel-btn next">›</button>
+              </div>
+              <div class="trailer">
+                <h4><strong>Trailer</strong></h4>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/gFHjNEvt_IQ?si=tqgafF260TPveDek"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+              </div>
+              <p>This game was developed in a indie-student team called LettuceCook Studios. My role was to manage the
+                project, as
+                well as
+                design and implement the UI.</p>
+              <ul class="project-info">
+                <li><strong>Download:</strong> <a href="https://grill-a-warfare.itch.io/grill-a-warfare">itch.io</a>
+                </li>
+                <li><strong>Engine:</strong> Unity</li>
+                <li><strong>Platform:</strong> PC</li>
+                <li><strong>Genre:</strong> First Person Shooter</li>
+                <li><strong>Tools Used:</strong> C#, Adobe Illustrator, Blender, Jira</li>
+                <li><strong>Duration:</strong> 4 and 1/2 months</li>
+                <li><strong>Team Size:</strong> 6</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="project-container">
+            <button class="project-name"><strong>Veil of the Hour</strong></button>
+            <p class="project-summary">A single level game where the player takes the role of an older sister trying to
+              find her missing younger brother, leading her into an abandoned carnival.</p>
+            <!-- COLLAPSIBLE CONTENT -->
+            <div class="project-details">
+              <div class="img-carousel">
+                <div class="project-imgs">
+
+
+                </div>
+                <button class="carousel-btn prev">‹</button>
+                <button class="carousel-btn next">›</button>
+              </div>
+              <div class="trailer">
+                <h4><strong>Gameplay Footage</strong></h4>
+                <video width="560" height="315" controls>
+                  <source src="videos/Veil of the Hour Gameplay.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+              </div>
+              <p>This game was created entirely by me, utilizing my skills learned in object-oriented programming, game
+                writing, and even 3D modeling. It was a great learning experience, despite the challenges of creating an
+                entire level by myself.</p>
+              <ul class="project-info">
+                <li><strong>Engine:</strong> Unity</li>
+                <li><strong>Platform:</strong> PC</li>
+                <li><strong>Genre:</strong>Mystery</li>
+                <li><strong>Tools Used:</strong> C#, Adobe Illustrator, Maya</li>
+                <li><strong>Duration:</strong> TBD</li>
+                <li><strong>Team Size:</strong> 1</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="project-container">
+            <button class="project-name"><strong>Hook Line and Sinker</strong></button>
+            <p class="project-summary">A meta-app for all-things dating related.</p>
+            <!-- COLLAPSIBLE CONTENT -->
+            <div class="project-details">
+              <div class="img-carousel">
+                <div class="project-imgs">
+                  <img src="images/hookline&sinker_Final Presentation/1.png" alt="Hook Line and Sinker Slide 1">
+                  <img src="images/hookline&sinker_Final Presentation/2.png" alt="Hook Line and Sinker Slide 2">
+                  <img src="images/hookline&sinker_Final Presentation/3.png" alt="Hook Line and Sinker Slide 3">
+                  <img src="images/hookline&sinker_Final Presentation/4.png" alt="Hook Line and Sinker Slide 4">
+                  <img src="images/hookline&sinker_Final Presentation/5.png" alt="Hook Line and Sinker Slide 5">
+                  <img src="images/hookline&sinker_Final Presentation/6.png" alt="Hook Line and Sinker Slide 6">
+                  <img src="images/hookline&sinker_Final Presentation/7.png" alt="Hook Line and Sinker Slide 7">
+                  <img src="images/hookline&sinker_Final Presentation/8.png" alt="Hook Line and Sinker Slide 8">
+                  <img src="images/hookline&sinker_Final Presentation/9.png" alt="Hook Line and Sinker Slide 9">
+                  <img src="images/hookline&sinker_Final Presentation/10.png" alt="Hook Line and Sinker Slide 10">
+                  <img src="images/hookline&sinker_Final Presentation/11.png" alt="Hook Line and Sinker Slide 11">
+                  <img src="images/hookline&sinker_Final Presentation/13.png" alt="Hook Line and Sinker Slide 13">
+                  <img src="images/hookline&sinker_Final Presentation/14.png" alt="Hook Line and Sinker Slide 14">
+
+
+                </div>
+                <button class="carousel-btn prev">‹</button>
+                <button class="carousel-btn next">›</button>
+              </div>
+
+              <p>This project was one of my first ever serious software development projects. I was the UI/UX developer,
+                as well as the person who implemented a functional login and profile system. It was developed by the
+                indie-student team Velocity Enterprises.</p>
+              <ul class="project-info">
+                <li><strong>Website:</strong> 
+                  <a href="https://hathewsg.github.io/HookLineAndSinker/">hathewsg.github.io/HookLineAndSinker</a></li>
+                <li><strong>Platform:</strong> Any</li>
+                <li><strong>Tools Used:</strong> VS Code, HTML, CSS, Javascript, GitHub Adobe Illustrator, Firebase,
+                  Render</li>
+                <li><strong>Duration:</strong> 4 and 1/2 months</li>
+                <li><strong>Team Size:</strong> 5</li>
+              </ul>
+            </div>
+          </div>
+
+
+          <div class="project-container"></div>
+          <div class="project-container"></div>
+          <div class="project-container"></div>
+        </div>
+
+
+
+
+
+
+
+
+
+      </div>
+
+    </div>
+
+    <div class="footer">
+
     </div>
 
   </div>
-</div>
+
+
+
+
+  </div>
+
+
+
+</body>
 
 <script src="script.js"></script>
+
+</html>
