linked pages properly

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="nav-bar">
                         <a href="home.html">Home</a>
-                        <a>About Me</a>
+                        <a href="projects.html">My Works</a>
                         <a href="contact.html">Contact Me</a>
                     </div>
 
