--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         <h2>Game Designer & Developer</h2>
                     </div>
                     <div class="nav-bar">
-                        <a href="###">My Works</a>
-                        <a>About Me</a>
+                        <a href="projects.html">My Works</a>
+                        <a href="about.html">About Me</a>
                         <a href="contact.html">Contact Me</a>
                     </div>
 
