--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
           </div>
           <div class="nav-bar">
             <a href="home.html">Home</a>
-            <a href="###">My Works</a>
+            <a href="projects.html">My Works</a>
             <a href="about.html">About Me</a>
           </div>
 
