fixed linking issue

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="main_style.css" />
   <link rel="stylesheet" href="project_style.css" />
 
-  <title>Home</title>
+  <title>Projects</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
             <h2>Game Designer & Developer</h2>
           </div>
           <div class="nav-bar">
-            <a href="projects.html">My Works</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About Me</a>
             <a href="contact.html">Contact Me</a>
           </div>
