fixed another linking issue

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                         <h2>Game Designer & Developer</h2>
                     </div>
                     <div class="nav-bar">
-                        <a href="home.html">Home</a>
+                        <a href="index.html">Home</a>
                         <a href="projects.html">My Works</a>
                         <a href="contact.html">Contact Me</a>
                     </div>
