Added a couple of projects, fixed formatting issues

--- a/about.html
+++ b/about.html
@@ -133,6 +133,12 @@
             </div>
 
             <div class="footer">
+                2025 © Sophia Hatheway
+                <div class="nav-bar">
+                    <a href="about.html">Back to Top</a>
+
+                </div>
+
 
             </div>
 
