--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                 </div>
 
- 
+
 
             </div>
 
@@ -61,6 +61,8 @@
             </div>
 
             <div class="footer">
+                2025 © Sophia Hatheway
+
 
             </div>
 
