--- a/projects.html
+++ b/projects.html
@@ -95,19 +95,13 @@
               find her missing younger brother, leading her into an abandoned carnival.</p>
             <!-- COLLAPSIBLE CONTENT -->
             <div class="project-details">
-              <div class="img-carousel">
-                <div class="project-imgs">
 
-
-                </div>
-                <button class="carousel-btn prev">‹</button>
-                <button class="carousel-btn next">›</button>
-              </div>
               <div class="trailer">
                 <h4><strong>Gameplay Footage</strong></h4>
-                <video width="560" height="315" controls>
-                  <source src="videos/Veil of the Hour Gameplay.mp4" type="video/mp4">
-                  Your browser does not support the video tag.
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ImGf7_O4lIY?si=umIBwJdOaenZV-b0"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
               <p>This game was created entirely by me, utilizing my skills learned in object-oriented programming, game
                 writing, and even 3D modeling. It was a great learning experience, despite the challenges of creating an
@@ -154,8 +148,9 @@
                 as well as the person who implemented a functional login and profile system. It was developed by the
                 indie-student team Velocity Enterprises.</p>
               <ul class="project-info">
-                <li><strong>Website:</strong> 
-                  <a href="https://hathewsg.github.io/HookLineAndSinker/">hathewsg.github.io/HookLineAndSinker</a></li>
+                <li><strong>Website:</strong>
+                  <a href="https://hathewsg.github.io/HookLineAndSinker/">hathewsg.github.io/HookLineAndSinker</a>
+                </li>
                 <li><strong>Platform:</strong> Any</li>
                 <li><strong>Tools Used:</strong> VS Code, HTML, CSS, Javascript, GitHub Adobe Illustrator, Firebase,
                   Render</li>
@@ -166,7 +161,42 @@
           </div>
 
 
-          <div class="project-container"></div>
+          <div class="project-container">
+            <button class="project-name"><strong>Little Kid's Room Asset Pack</strong></button>
+            <p class="project-summary">A small asset pack of items in a little kid's room, showcasing the 3D modeling
+              skills I have leared.</p>
+            <!-- COLLAPSIBLE CONTENT -->
+            <div class="project-details">
+              <div class="img-carousel">
+                <div class="project-imgs">
+                  <img src="images/kidsroomassetpack/TeddyLighting1.jpg" alt="Kid's Room Asset Pack Teddy Bear">
+                  <img src="images/kidsroomassetpack/ChestLighting2.jpg" alt="Kid's Room Asset Pack Toy Chest">
+
+                </div>
+                <button class="carousel-btn prev">‹</button>
+                <button class="carousel-btn next">›</button>
+              </div>
+              <div class="trailer">
+                <h4><strong>Showcase</strong></h4>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/0CxfCj1xWXo?si=QCWllwFZvOhGbHK8"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+              </div>
+              <p>A personal project showcasing an extra skill I learned in school - 3D Modeling. While it is not my main
+                area of expertise, it demonstrates my ability to create detailed assets, and adapt into a different role
+                if need be. This was not a school project--this was entirely made by me without any outside help, aside
+                from a few free pre-made textures.</p>
+              <ul class="project-info">
+                <li><strong>Engine:</strong> Maya</li>
+                <li><strong>Tools Used:</strong>Adobe Illustrator, Maya</li>
+                <li><strong>Duration:</strong>
+                  < 1 month</li>
+                <li><strong>Team Size:</strong> 1</li>
+              </ul>
+            </div>
+          </div>
           <div class="project-container"></div>
           <div class="project-container"></div>
         </div>
@@ -184,6 +214,12 @@
     </div>
 
     <div class="footer">
+      2025 © Sophia Hatheway
+      <div class="nav-bar">
+        <a href="projects.html">Back to Top</a>
+
+      </div>
+
 
     </div>
 
