Added more projects, fixed padding/margin issue for footer

--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
 
             </div>
 
-            <div class="footer">
+            <div class="footer" style="padding-left: 45px;">
                 2025 © Sophia Hatheway
                 <div class="nav-bar">
                     <a href="about.html">Back to Top</a>
