--- a/projects.html
+++ b/projects.html
@@ -111,7 +111,7 @@
                 <li><strong>Platform:</strong> PC</li>
                 <li><strong>Genre:</strong>Mystery</li>
                 <li><strong>Tools Used:</strong> C#, Adobe Illustrator, Maya</li>
-                <li><strong>Duration:</strong> TBD</li>
+                <li><strong>Duration:</strong> 4 Months</li>
                 <li><strong>Team Size:</strong> 1</li>
               </ul>
             </div>
@@ -161,6 +161,8 @@
           </div>
 
 
+
+
           <div class="project-container">
             <button class="project-name"><strong>Little Kid's Room Asset Pack</strong></button>
             <p class="project-summary">A small asset pack of items in a little kid's room, showcasing the 3D modeling
@@ -197,31 +199,90 @@
               </ul>
             </div>
           </div>
-          <div class="project-container"></div>
-          <div class="project-container"></div>
+          <div class="project-container">
+            <button class="project-name"><strong>Academic Paper - Puzzles, Politeness, and Tea</strong></button>
+            <p class="project-summary">An acedemic paper where I explore the game series Professor Layton, its
+              relationship between the ideals of a Soft-Europe and how it is utilized to
+              create a vessel for Japanese societal values, as well as how these values are shared across the world.
+            </p>
+            <!-- COLLAPSIBLE CONTENT -->
+            <div class="project-details">
+
+              <p>When writing this paper, I didn't just want to gloat about the simple yet admirable game design put
+                into
+                Professor Layton that makes it so alluring, but dig deeper into why certain
+                decisions were made within the development process. The game is hidden behind a veil of European
+                aesthetics and characters, but at its core it reflects
+                nostalgia, civility, and educational morality that are rooted in Japanese culture. This paper explores
+                how, why, and the importance of these values.
+              </p>
+              <ul class="project-info">
+                <li><strong>Paper:</strong> <a
+                    href="https://docs.google.com/document/d/1QrHOw7YND6-TkLmDRmJhoIU1nevf0yGx/edit?usp=sharing&ouid=111970985559223388728&rtpof=true&sd=true">Puzzles,
+                    Politeness, and Tea: Nostalgia, Civility, and Educational Morality as
+                    Reflections of Japanese Ideals and Philosophy in Professor Layton amid Globalization</a>
+                </li>
+                <li><strong>Duration:</strong> 3 Weeks</li>
+                <li><strong>Team Size:</strong> 1</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="project-container">
+            <button class="project-name"><strong>Portfolio Website</strong></button>
+            <p class="project-summary">The very website you are on right now! A personal website to showcase my skills
+              and projects.</p>
+            <!-- COLLAPSIBLE CONTENT -->
+            <div class="project-details">
+
+              <p>This website was created entirely by me from scratch using HTML, CSS, and Javascript. It was a great
+                way
+                to showcase my web development skills, as well as provide a platform for me to share my projects and
+                experiences with others.</p>
+              <ul class="project-info">
+                <li><strong>Website:</strong> <a href="index.html">https://shathewaydev-design.github.io/</a></li>
+                <li><strong>Tools Used:</strong> VS Code, HTML, CSS, Javascript</li>
+                <li><strong>Duration:</strong> 1 Week</li>
+                <li><strong>Team Size:</strong> </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="project-container">
+            <button class="project-name"><strong>More Projects Coming Soon!</strong></button>
+            <p class="project-summary">Stay tuned for more of my works in the future.</p>
+            <!-- COLLAPSIBLE CONTENT -->
+            <div class="project-details">
+              <p>I'm always working on new projects and expanding my portfolio. Check back later to see what I've been
+                up to!</p>
+            </div>
+          </div>
         </div>
 
 
-
-
-
-
-
-
-
-      </div>
-
-    </div>
-
-    <div class="footer">
-      2025 © Sophia Hatheway
-      <div class="nav-bar">
-        <a href="projects.html">Back to Top</a>
-
       </div>
 
 
+
+
+
+
+
+
+
     </div>
+
+  </div>
+
+  <div class="footer">
+    2025 © Sophia Hatheway
+    <div class="nav-bar">
+      <a href="projects.html">Back to Top</a>
+
+    </div>
+
+
+  </div>
 
   </div>
 
