--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="nav-bar">
                         <a href="projects.html">My Works</a>
-                        <a href="about.html">About Me</a>
+                        <a href="abt.html">About Me</a>
                         <a href="contact.html">Contact Me</a>
                     </div>
 
