add name to home page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="main-content">
-                <h3><strong>Welcome to My Portfolio Site!</strong></h3>
+                <h3><strong>Welcome to Sophia Hatheway's Portfolio Site!</strong></h3>
                 <p class="home-intro">
                     I am a game designer who also has confident skills in game coding, and is eager to tackle dynamic
                     challenges and
