(Hopefully) Full Home Page redesign

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
 
     <div class="background">
-        <div class="content">
-            <div class="header">
+        <section class="content">
+            <!-- <div class="header">
                 <div class="header-content">
                     <div class="title-logo">
                         <h1>Sophia Hatheway</h1>
@@ -38,10 +38,10 @@
 
 
 
-            </div>
+            </div> -->
 
             <div class="main-content">
-                <h3><strong>Welcome to Sophia Hatheway's Portfolio Site!</strong></h3>
+                <!-- <h3><strong>Welcome to Sophia Hatheway's Portfolio Site!</strong></h3>
                 <p class="home-intro">
                     I am a game designer who also has confident skills in game coding, and is eager to tackle dynamic
                     challenges and
@@ -58,21 +58,63 @@
                     projects!
                 </p>
 
+            -->
+
+                <div class="welcome-block">
+                    <div class="title">
+                        <h1><strong>Sophia Hatheway</strong></h1>
+                        <h2>Game Designer & Developer</h2>
+                    </div>
+                    <div class="links">
+
+                        <a href="projects.html">Works</a> |
+                        <a href="about.html">About</a> |
+                        <a href="contact.html">Contact</a>
+
+                    </div>
+
+                </div>
+
+
+
             </div>
 
-            <div class="footer">
-                2025 © Sophia Hatheway
 
 
-            </div>
 
-        </div>
-
-
+        </section>
 
 
     </div>
 
+    <section class="extended-content">
+
+        <div class="extended-container"> 
+            <div class="extended-head">
+                <h3><strong>Welcome to Sophia Hatheway's Portfolio Site!</strong></h3>
+            </div>
+            <div class="extended-text">
+                <p>
+                    I am a game designer who also has confident skills in game coding, and is eager to tackle dynamic
+                    challenges and
+                    apply creativity
+                    to craft entertaining player experiences. I have proficiency in project management, user-centric
+                    problem-solving,
+                    and seamless collaboration across teams as well as independently. I have experience in several game
+                    development
+                    processes,
+                    such as design, development, and 3D modeling, as well as other fields, like web and software
+                    development.
+                    You can navigate to other pages using the links at the top, such as my works page, where you can
+                    view my
+                    projects!
+                </p>
+            </div>
+        </div>
+
+        <div class="footer">
+        2026 © Sophia Hatheway
+    </section>
 
 
 </body>
