--- a/projects.html
+++ b/projects.html
@@ -166,7 +166,7 @@
           <div class="project-container">
             <button class="project-name"><strong>Little Kid's Room Asset Pack</strong></button>
             <p class="project-summary">A small asset pack of items in a little kid's room, showcasing the 3D modeling
-              skills I have leared.</p>
+              skills I have learned.</p>
             <!-- COLLAPSIBLE CONTENT -->
             <div class="project-details">
               <div class="img-carousel">
@@ -201,7 +201,7 @@
           </div>
           <div class="project-container">
             <button class="project-name"><strong>Academic Paper - Puzzles, Politeness, and Tea</strong></button>
-            <p class="project-summary">An acedemic paper where I explore the game series Professor Layton, its
+            <p class="project-summary">An academic paper where I explore the game series Professor Layton, its
               relationship between the ideals of a Soft-Europe and how it is utilized to
               create a vessel for Japanese societal values, as well as how these values are shared across the world.
             </p>
