--- a/index.html
+++ b/index.html
@@ -70,9 +70,16 @@
                     processes,
                     such as design, development, and 3D modeling, as well as other fields, like web and software
                     development.
-                    You can navigate to other pages using the links at the top, such as my works page, where you can
+                    <br>
+                    <br>
+                    Current Games and Simulation Student at Miami University, with a concentration in computer science
+                    and Minor in Japanese.
+                    <br>
+                    <br>
+                    You can navigate to other pages using the links above, such as my works page, where you can
                     view my
                     projects!
+
                 </p>
             </div>
         </div>
