--- a/contact.html
+++ b/contact.html
@@ -2,79 +2,90 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="main_style.css" />
-  <link rel="stylesheet" href="contact_style.css" />
+    <link rel="stylesheet" href="main_style.css" />
+    <link rel="stylesheet" href="contact_style.css" />
 
-  <title>Contact</title>
+    <title>Contact</title>
 </head>
 
 <body>
 
-  <div class="background">
-    <div class="content">
-      <div class="header">
-        <div class="header-content">
-          <div class="title-logo">
-            <h1>Sophia Hatheway</h1>
-            <h2>Game Designer & Developer</h2>
-          </div>
-          <div class="nav-bar">
-            <a href="index.html">Home</a>
-            <a href="projects.html">My Works</a>
-            <a href="about.html">About Me</a>
-          </div>
+
+    <section class="content">
+
+        <div class="main-content">
+
+            <div class="welcome-block">
+                <!--  <div class="title">
+                    <h1><strong>Sophia Hatheway</strong></h1>
+                    <h2>Game Designer & Developer</h2>
+                </div>
+                -->
+                <div class="links">
+
+                    <a href="projects.html">Works</a> |
+                    <a href="about.html">About</a> |
+                    <a href="index.html">Home</a>
+
+                </div>
+
+                <ul class="contact-list">
+                    <li><strong style="font-family: 'Poiret One', sans-serif;">Email:</strong> shatheway.dev@gmail.com
+                    </li>
+                    <li><strong style="font-family: 'Poiret One', sans-serif;"><a href="https://www.linkedin.com/in/sophia-hatheway-28261a383/">LinkedIn</a></strong>
+                    </li>
+                    <li><strong style="font-family: 'Poiret One', sans-serif;"><a
+                            href="https://github.com/shathewaydev-design">GitHub</a></strong> </li>
+                    <li><strong style="font-family: 'Poiret One', sans-serif;">Discord:</strong> @shatheway</li>
+                    <li><strong style="font-family: 'Poiret One', sans-serif;"><a
+                            href="https://shathewaydevdesign.itch.io">itch.io</a></strong> </li>
+                </ul>
+
+            </div>
+
+
 
         </div>
 
 
 
-      </div>
 
-      <div class="main-content">
-        <h3><strong>How to Contact Me</strong></h3>
-        <p class="contact-intro">
-          I have several methods of contact available! Email is often the best way to reach me for
-          professional inquiries, collaborations, or questions regarding my work.
-        </p>
-        <ul class="contact-list">
-          <li><strong style="font-family: 'Poiret One', sans-serif;">Email:</strong> shatheway.dev@gmail.com</li>
-          <li><strong style="font-family: 'Poiret One', sans-serif;">LinkedIn:</strong> <a
-              href="https://www.linkedin.com/in/sophia-hatheway-28261a383/">linkedin.com/in/sophia-hatheway-28261a383/</a>
-          </li>
-          <li><strong style="font-family: 'Poiret One', sans-serif;">GitHub:</strong> <a
-              href="https://github.com/shathewaydev-design">shathewaydev-design</a></li>
-          <li><strong style="font-family: 'Poiret One', sans-serif;">Discord:</strong> shatheway</li>
-          <li><strong style="font-family: 'Poiret One', sans-serif;">itch.io:</strong> <a
-              href="https://shathewaydevdesign.itch.io">shathewaydevdesign.itch.io</a></li>
-        </ul>
-
-      </div>
-
-      <div class="footer">
-        2025 © Sophia Hatheway
-
-
-
-      </div>
-
-    </div>
+    </section>
 
 
 
 
-  </div>
+    <section class="extended-content">
 
+        <div class="extended-container">
+            <div class="extended-head">
+                <h3><strong>How to Contact Me</strong></h3>
+            </div>
+            <div class="extended-text">
+                <p>
+                    I have several methods of contact available! Email is often the best way to reach me for
+                    professional inquiries, collaborations, or questions regarding my work.
+
+                </p>
+            </div>
+        </div>
+
+        <div class="footer">
+            2026 © Sophia Hatheway
+            <a href="contact.html" class="footer-right">Back to Top</a>
+        </div>
+    </section>
 
 
 </body>
